--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>DubMania - Jeu gratuit multijoueur de doublage</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./images/web_logo.png">
 </head>
 <body>
     
