add audio recording

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="icon" href="./images/web_logo.png">
 </head>
 <body>
-    
+    <button id="start_record"></button>
+    <button id="end_record"></button>
+    <ul id="audioList"></ul>
+    <audio src="audioPlayer" controls></audio>
 </body>
+<script src="script.js"></script>
 </html>
