--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="./images/web_logo.png">
 </head>
 <body>
-    <button id="start_record"></button>
-    <button id="end_record"></button>
+    <button id="start_record">Start Recording</button>
+    <button id="end_record">Stop Recording</button>
     <ul id="audioList"></ul>
     <audio src="audioPlayer" controls></audio>
 </body>
