--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="icon" href="./images/web_logo.png">
 </head>
 <body>
-    <button id="start_record">Start Recording</button>
-    <button id="end_record">Stop Recording</button>
-    <ul id="audioList"></ul>
-    <audio src="audioPlayer" controls></audio>
+
+    <main>
+
+        <button id="mic">Record</button>
+        <audio controls></audio>
+
+    </main>
+
 </body>
 <script src="script.js"></script>
 </html>
