--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <main>
 
-        <button id="mic">Record</button>
-        <audio controls></audio>
+        <button class="mic-toggle" id="mic">Record</button>
+        <audio class="playback" controls></audio>
 
     </main>
 
