--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
     <main>
 
-        <button class="mic-toggle" id="mic">Record</button>
+        <button class="mic-toggle" id="mic">Enregistrer</button>
+        <button class="play" id="play">Jouer</button>
         <audio class="playback" controls></audio>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/QXYummLvPaQ?si=J1PhFO9vX36R5eHH&amp;controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="" referrerpolicy="strict-origin-when-cross-origin"></iframe>
 
     </main>
 
