--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button class="mic-toggle" id="mic">Enregistrer</button>
         <button class="play" id="play">Jouer</button>
         <audio class="playback" controls></audio>
-        <img src="https://github.com/DJ4nto/DubMania/blob/main/images/logo.png" width="300"></img>
+        <!--Trouver un moyen d'acceder aux video (de romandub) en .mp4 avec un lien (tuto : https://blog.hubspot.fr/website/inserer-video-html)-->
 
     </main>
 
