add the video launch

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <main>
 
-        <button class="mic-toggle" id="mic">Enregistrer</button>
-        <button class="play" id="play">Jouer</button>
+        <button class="mic-btn" id="mic">Enregistrer</button>
+        <button class="play-btn" id="play">Jouer</button>
         <audio class="playback" controls></audio>
         <!--Trouver un moyen d'acceder aux video (de romandub) en .mp4 avec un lien (tuto : https://blog.hubspot.fr/website/inserer-video-html)-->
 
