--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <main>
 
-        <button class="mic-btn" id="mic">Enregistrer</button>
+        <button class="mic-btn" id="start-mic">Enregistrer</button>
+        <button class="mic-stop-btn" id="stop-mic">Stop</button>
         <button class="play-btn" id="play">Jouer</button>
         <audio class="playback" controls></audio>
         <!--Trouver un moyen d'acceder aux video (de romandub) en .mp4 avec un lien (tuto : https://blog.hubspot.fr/website/inserer-video-html)-->
