--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button class="mic-stop-btn" id="stop-mic">Stop</button>
         <button class="play-btn" id="play">Jouer</button>
         <audio class="playback" controls></audio>
-        <!--Trouver un moyen d'acceder aux video (de romandub) en .mp4 avec un lien (tuto : https://blog.hubspot.fr/website/inserer-video-html)-->
+        <!--Trouver un moyen d'acceder aux video (de romandub) en .mp4 avec un lien (tuto : https://blog.hubspot.fr/website/inserer-video-html | https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Client-side_web_APIs/Video_and_audio_APIs)-->
 
     </main>
 
