--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button class="mic-btn" id="start-mic">Enregistrer</button>
         <button class="mic-stop-btn" id="stop-mic">Stop</button>
         <button class="play-btn" id="play">Jouer</button>
+        <button class="pause-btn" id="pause">Pause</button>
         <audio class="playback"></audio>
         <!--Trouver un moyen d'acceder aux video (de romandub) en .mp4 avec un lien (tuto : https://blog.hubspot.fr/website/inserer-video-html | https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Client-side_web_APIs/Video_and_audio_APIs | https://medium.com/@bryanjenningz/how-to-record-and-play-audio-in-javascript-faa1b2b3e49b)-->
 
