--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button class="play-btn" id="play">Jouer</button>
         <button class="pause-btn" id="pause">Pause</button>
         <audio class="playback"></audio>
-        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/QXYummLvPaQ?si=bdfidfBe_liMQ2C5&amp;controls=0&amp;start=5" frameborder="0" referrerpolicy="strict-origin-when-cross-origin"></iframe>
+        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/QXYummLvPaQ?si=bdfidfBe_liMQ2C5&amp;controls=0&amp;start=5" allow="autoplay; encrypted-media" frameborder="0" referrerpolicy="strict-origin-when-cross-origin"></iframe>
         <!--Trouver un moyen d'acceder aux video (de romandub) en .mp4 avec un lien (tuto : https://blog.hubspot.fr/website/inserer-video-html | https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Client-side_web_APIs/Video_and_audio_APIs)-->
 
     </main>
