--- a/index.html
+++ b/index.html
@@ -10,16 +10,9 @@
 
     <main>
 
-        <button class="mic-btn" id="start-mic">Enregistrer</button>
-        <button class="mic-stop-btn" id="stop-mic">Stop</button>
-        <button class="play-btn" id="play">Jouer</button>
-        <button class="pause-btn" id="pause">Pause</button>
-        <audio class="playback"></audio>
-        <video id="video"><source src="./video/videotest.mp4" type="video/mp4" /></video>
-        <!--Trouver un moyen d'acceder aux video (de romandub) en .mp4 avec un lien (tuto : https://blog.hubspot.fr/website/inserer-video-html | https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Client-side_web_APIs/Video_and_audio_APIs)-->
+        <a href="game.html"></a>
 
     </main>
 
 </body>
-<script src="script.js"></script>
 </html>
