--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
 
         <button class="mic-btn" id="start-mic">Enregistrer</button>
         <button class="mic-stop-btn" id="stop-mic">Stop</button>
-        <button class="play-btn" id="play">Jouer</button>
+        <button class="unpause-btn" id="play">Jouer</button>
         <button class="pause-btn" id="pause">Pause</button>
         <audio class="playback"></audio>
         <video id="video"><source src="./video/videotest.mp4" type="video/mp4" /></video>
