--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 <body>
 
     <main>
+        
+        <img src="./images/logo.png">
 
-        <a href="game.html">Jouer</a>
-
+        <a href="game.html">
+            <button class="play-btn">Doubler</button>
+        </a>
     </main>
 
 </body>
