--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 
     <main>
         
-        <img src="./images/logo.png">
+        <img href="./images/logo.png">
 
         <a href="game.html">
             <button class="play-btn">Doubler</button>
         </a>
+        
     </main>
 
 </body>
