change main page

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
     <main>
         
-        <img href="./images/logo.png">
+        <img src="./images/logo.png" alt="logo" class="logo">
 
-        <a href="game.html">
-            <button class="play-btn">Doubler</button>
-        </a>
+        <div class="div-play-btn" >
+            <a href="game.html">
+                <button class="play-btn">Doubler</button>
+            </a>
+        </div>
         
     </main>
 
