--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
         <button class="unpause-btn" id="play">Jouer</button>
         <button class="pause-btn" id="pause">Pause</button>
         <audio class="playback"></audio>
-        <video id="video"><source src="./video/videotest.mp4" type="video/mp4" /></video>
+        <video id="video"><source src="./video/video.mp4" type="video/mp4" /></video>
         <!--Trouver un moyen d'acceder aux video (de romandub) en .mp4 avec un-->
 
     </main>
