--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@
         <button class="pause-btn" id="pause">Pause</button>
         <audio class="playback"></audio>
         <video id="video"><source src="./video/video.mp4" type="video/mp4" /></video>
-        <!--Trouver un moyen d'acceder aux video (de romandub) en .mp4 avec un-->
+        <!--Trouver un moyen d'acceder aux video (de romandub) en .mp4 depuis internet-->
 
     </main>
 
