--- a/game.html
+++ b/game.html
@@ -13,6 +13,7 @@
         <button class="mic-btn" id="start-mic">Enregistrer</button>
         <button class="unpause-btn" id="play">Jouer</button>
         <button class="pause-btn" id="pause">Pause</button>
+        <button class="send-btn" id="send">Envoyer</button>
         <audio class="playback"></audio>
         <video id="video"><source src="./video/video.mp4" type="video/mp4" /></video>
         <!--Trouver un moyen d'acceder aux video (de romandub) en .mp4 depuis internet-->
