--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         
         <img src="./images/logo.png" alt="logo" class="logo">
 
+        <div class="tutorial">
+            <p></p>
+        </div>
+
         <div class="div-play-btn" >
             <a href="game.html">
                 <button class="play-btn">Doubler</button>
