--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <img src="./images/logo.png" alt="logo" class="logo">
 
         <div class="tutorial">
-            <p></p>
+            <div class="caroussel-tutorial">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
         </div>
 
         <div class="div-play-btn" >
