--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
         <div class="tutorial">
             <div class="caroussel-tutorial">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img class="unslide-img" src="" alt="">
+                <img class="unslide-img" src="" alt="">
+                <img class="unslide-img" src="" alt="">
             </div>
         </div>
 
