--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>DubMania - Jeu gratuit multijoueur de doublage</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./images/web_logo.png">
+    <link rel="icon" href="./images/web-logo.png">
 </head>
 <body>
 
@@ -14,9 +14,20 @@
 
         <div class="tutorial">
             <div class="caroussel-tutorial">
-                <img class="unslide-img" src="" alt="">
-                <img class="unslide-img" src="" alt="">
-                <img class="unslide-img" src="" alt="">
+                <div class="slide">
+                    <img class="slide-img" src="./images/mic-logo.png" alt="img">
+                    <p class="slide-txt">Enregistrez-vous sur la vidéo en doublant le texte de votre couleure</p>
+                </div>
+
+                <div class="slide">
+                    <img class="slide-img" src="./images/send-logo.png" alt="img">
+                    <p class="slide-txt">Ecouter et Envoyez votre doublage</p>
+                </div>
+
+                <div class="slide">
+                    <img class="slide-img" src="./images/video-logo.png" alt="img">
+                    <p class="slide-txt">Visionner les vidéos doublées et Rigoler avec ses amis</p>
+                </div>
             </div>
         </div>
 
