--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <title>DubMania - Jeu gratuit multijoueur de doublage</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./images/mic-logo.png">
+    <link rel="icon" href="./images/web-logo.png">
 </head>
 <body>
 
