--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                     <p class="slide-txt">Visionner les vidéos doublées et Rigoler avec ses amis</p>
                 </div>
             </div>
+
+            <div class="caroussel-btn">
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+            </div>
         </div>
 
         <div class="div-play-btn" >
