--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
                 <div class="slide">
                     <img class="slide-img" src="./images/send-logo.png" alt="img">
-                    <p class="slide-txt">Ecouter et Envoyez votre doublage</p>
+                    <p class="slide-txt">Ecoutez puis Envoyez votre doublage</p>
                 </div>
 
                 <div class="slide">
                     <img class="slide-img" src="./images/video-logo.png" alt="img">
-                    <p class="slide-txt">Visionner les vidéos doublées et Rigoler avec ses amis</p>
+                    <p class="slide-txt">Visionnez vos vidéos doublées et Rigolez</p>
                 </div>
             </div>
 
