--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
         <button class="unpause-btn" id="play">Jouer</button>
         <button class="pause-btn" id="pause">Pause</button>
         <button class="send-btn" id="send">Envoyer</button>
-        <audio class="playback" controls></audio>
+        <audio class="playback"></audio>
         <video id="video"><source src="./video/video.mp4" type="video/mp4" /></video>
         <!--Trouver un moyen d'acceder aux video (de romandub) en .mp4 depuis internet-->
 
