--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 </div>
             </div>
 
+            <div class="links">
+                <a href="https://github.com/DJ4nto/DubMania">GitHub</a>
+            </div>
         </div>
 
         <div class="div-play-btn" >
