en cour de développement

--- a/game.html
+++ b/game.html
@@ -20,6 +20,11 @@
 
     </main>
 
+    <div class="bandeau_dev">
+        <p>! EN COUR DE DÉVELOPPEMENT !</p>
+        <a href="https://www.youtube.com/@RomandubCH">Vidéo provenant de Romandub</a>
+    </div>
+
 </body>
 <script src="script.js"></script>
 </html>
