--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
         <button class="send-btn" id="send">Envoyer</button>
         <audio class="playback"></audio>
         <video id="video"><source src="./video/video.mp4" type="video/mp4" /></video>
-        <!--Trouver un moyen d'acceder aux video (de romandub) en .mp4 depuis internet-->
+        <!--Trouver un moyen d'acceder aux video (à doubler) en .mp4 depuis internet-->
 
     </main>
 
